--- a/SDiZO-Projekt.vcxproj.filters
+++ b/SDiZO-Projekt.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="DrzewoRB.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
+    <ClCompile Include="Tablica.cpp">
+      <Filter>Pliki źródłowe</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Struktury.h">
