--- a/SDiZO-Projekt.vcxproj
+++ b/SDiZO-Projekt.vcxproj
@@ -144,6 +144,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Menu.cpp" />
     <ClCompile Include="DrzewoRB.cpp" />
+    <ClCompile Include="Tablica.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Struktury.h" />
